--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -19,18 +19,9 @@
   <!-- My p5 sketch -->
   <script src="js/sketch.js"></script>
 
-
 </head>
 
 <body>
-
-  <!-- Navbar -->
-  <!-- <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="#">News</a></li>
-    <li><a href="#">Contact</a></li>
-    <li><a href="#">About</a></li>
-  </ul> -->
 
   <!-- Nav -->
  <nav>
@@ -41,18 +32,17 @@
    <a href="#">Extra</a>
  </nav>
 <br>
-
+<!-- margin on bottom -->
   <section id="starting-banner">
-    <header>
+    <header >
     <!-- class="slide-up show-on-scroll" -->
-    <h1>CYBERNETICS</h1>
+    <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
     </header>
   </section>
 
-
-
   <!-- First Section INTRODUCTION -->
   <section id="introduction">
+    <!-- Add margin instead of br or add padding for space top -->
 <br>
 <br>
     <div class="ellipse">
@@ -76,8 +66,10 @@
         <img src="assets/images/input_arrow_blue.png" alt="arrow_image">
       </div>
 
+    <div id="intro-buttons-container">
       <button class="button">I don't know?</button>
       <button class="button">Feedback loops!</button>
+    </div>
   </section>
 
   <!-- Second Section CHOICE -->
@@ -86,15 +78,18 @@
     <div class="ellipse">
       <img src="assets/images/wiener_2.png" alt="wiener-image">
     </div>
+
     <p>
     You're ability to make a choice, and adjust is what makes you a cybernetic system. The term cybernetics is derived from a greek word meaning to steer a ship. In that sense you, and most functional systems, steer themselves back on track by making adjustments based on feedback.
 
     For example make a choice from the following options:
     </p>
 
-
+  <div id="choice-buttons-container">
     <button class="button"> Yes </button>
     <button class="button"> No</button>
+  </div>
+
     <span id = "animated-artifact">
     <img src ="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/6-gon_rhombic_dissection.svg/800px-6-gon_rhombic_dissection.svg.png" width = "100px" height ="100px">
   </span>
@@ -105,11 +100,15 @@
   <!-- Third Section CONNECT -->
   <section id="connect">
     <h2>Sense and Correct</h2>
+
+    <p>Can you find the hidden message in the sine wave? Hover over it and give it a try.</p>
+
     <div class="ellipse">
       <img src="assets/images/wiener_cigar.png" alt="wiener-image">
     </div>
     <!-- P5 Sketch -->
     <div id="sketch-holder"></div>
+
     <p> Notice how in order to find the hidden message you had to take several attempts. You overshot the movement slightly and then had to adjust by going slower until you achieved your objective. This ability to sense and adapt to your environment is part of my understanding of Cybernetics.
     <br>
     Try making some interesting patterns with the sine wave. You will notice that same process of adjustment until you reach the desired pattern.
@@ -118,9 +117,19 @@
   </section>
 
   <!-- Fourth Section -->
-  <section>
+  <!-- <section id="Test">
 
-  </section>
+    <div class="ellipse">
+      <img src="assets/images/wiener_cigar.png" alt="wiener-image">
+    </div>
+
+      <h2>Test Your Knowledge</h2>
+
+      <p>Assemble the feedback model in the correct order</p>
+
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, quaerat, ducimus. Accusamus enim debitis quae nulla assumenda odio saepe deserunt veniam laudantium velit, soluta iure repudiandae error! Nisi, praesentium, ea. </p>
+
+  </section> -->
 
   <!-- Fifth Section -->
   <section>
