Updated website assets

--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -54,15 +54,13 @@
       <img src="assets/images/wiener_1.png" alt="wiener-image">
     </div>
 
-    <p class="show-on-scroll"> Have a seat. It's time for your examination on Cybernetics. Yes I am
-        Norbert Wiener, but let's not get hung up on that.
+    <p class="show-on-scroll"> Hello student. How about a quick course on Cybernetics. I am
+        Norbert Wiener, and I am considered to father of Cybernetics, but let's not get hung up on that.
 
-        You're first question is...
+        Bellow is a diagram of a homeostatic information system.
         <br>
         <br>
-        <br>
-        <br>
-        Name this system:
+        Do you know how this kind of system funtions?
     </p>
 
       <div id="feedback_arrows">
@@ -85,9 +83,14 @@
     </div>
 
     <p>
-    You're ability to make a choice, and adjust is what makes you a cybernetic system. The term cybernetics is derived from a greek word meaning to steer a ship. In that sense you, and most functional systems, steer themselves back on track by making adjustments based on feedback.
+
+    Yes, it is feedback loops.
+
+    Furthermore, you're ability to make a choice, and adjust to your environemtn is what makes you a cybernetic system. The term cyber is derived from a greek word meaning to steer a ship. In that sense you, and most cybernetic systems, steer themselves back on track by making adjustments based on feedback.
 
     For example make a choice from the following options:
+
+    Is Cybernetics based on the idea of course correction, much like a sailboat?
     </p>
 
   <div id="choice-buttons-container">
@@ -96,7 +99,7 @@
   </div>
 
     <span id = "animated-artifact">
-    <img src ="https://upload.wikimedia.org/wikipedia/commons/thumb/7/72/6-gon_rhombic_dissection.svg/800px-6-gon_rhombic_dissection.svg.png" width = "100px" height ="100px">
+    <img src ="assets/images/sailboat.png" width = "100px" height ="100px">
   </span>
 
 
@@ -114,7 +117,7 @@
     <!-- P5 Sketch -->
     <div id="sketch-holder"></div>
 
-    <p> Notice how in order to find the hidden message you had to take several attempts. You overshot the movement slightly and then had to adjust by going slower until you achieved your objective. This ability to sense and adapt to your environment is part of my understanding of Cybernetics.
+    <p> In order to find the hidden message you took several attempts. You overshot the movement slightly and then had to adjust by going slower until you achieved your objective. This ability to sense and adapt to your environment is part of my understanding of Cybernetics.
     <br>
     Try making some interesting patterns with the sine wave. You will notice that same process of adjustment until you reach the desired pattern.
     </p>
@@ -130,13 +133,13 @@
       <img src="assets/images/wiener_chalkboard.png" alt="wiener-image">
     </div>
 
-
+        <p>Now is a good time for a test!</p>
 
       <p>Assemble the feedback model in the correct order</p>
 
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed, quaerat, ducimus. Accusamus enim debitis quae nulla assumenda odio saepe deserunt veniam laudantium velit, soluta iure repudiandae error! Nisi, praesentium, ea. </p>
 
-    <div>
+    <div id="input">
       <p>
         input
       </p>
@@ -167,13 +170,39 @@
   </section>
 
   <!-- Fifth Section -->
-  <section>
+  <section id="cybernetics-levels">
 
+  <P>
+    One of the key elements of a cybernetic system is that it is self regulating. For example, all of your neurons in your brains are operating without you needing to do anything. Furthermore they are assembling themselves according to input.
+  </p>
 
+  <P>
+  One way to think about this is to imagine the operation of a musicboc. The dancing figurine on top of the music box is not self regulating or adaptive. It doesn't sense anything and therefore can only do what it is directly programmed to do.
+  </p>
+
+  <div id="figurine-container">
+  <img src="assets/images/musical-box.png" alt="music-box">
+  </div>
 
   </section>
 
+<section id="conclusion">
 
+  <p>
+    There are those who claims there are levels to cybernetics.
+
+    The first level is conceptualizing the framework for human and machine systems.
+
+    The second id the focussing on the observer.
+
+    The third is virtualization.
+
+    We are beginning to see virtualization in areas of personal technological enhancement. As well as in medical innovations.
+
+    For example:
+  </p>
+
+</section>
 
   <!-- My script(s) -->
   <script src="js/script.js"></script>
