--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -139,10 +139,12 @@
     <!-- P5 Sketch -->
     <div id="sketch-holder"></div>
 
+  <div  id="found-message">
     <p> Well done! In order to find the hidden message you probably overshot the movement slightly and had to adjust until you achieved the objective. This ability to sense and adapt to your environment is part of my understanding of Cybernetics.
       <br>
       Try making some interesting patterns with the sine wave. You will notice that same process of adjustment until you reach the desired pattern.
     </p>
+  </div>
 
   </section>
 
@@ -154,7 +156,7 @@
     <div class="sub-header-section">
 
       <div class="ellipse">
-        <img src="assets/images/wiener_chalkboard.png" alt="wiener-image">
+        <img src="assets/images/wiener_chalkboard_LI.jpg" alt="wiener-image">
       </div>
 
       <div class="section-question">
@@ -168,27 +170,24 @@
 
 
     <div class="test-model-text">
-      <p class="drag-model-text">
-        input
-      </p>
+      <img src="assets/images/input.png" alt="input-image" class="drag-model-text">
+      </img>
 
-      <p class="drag-model-text">
-        process
-      </p>
+      <img src="assets/images/output.png" alt="output-image" class="drag-model-text">
+      </img>
+    <!-- </div>
+
+    <div class="test-model-text"> -->
+      <img src="assets/images/process.png" alt="process-image" class="drag-model-text">
+      </img>
+
+      <img src="assets/images/feedback.png" alt="feedback-image" class="drag-model-text">
+      </img>
     </div>
 
-    <div class="test-model-text">
-      <p class="drag-model-text">
-        output
-      </p>
-
-      <p class="drag-model-text">
-        feedback
-      </p>
-    </div>
-
+  <!-- Test Model Image -->
     <div id="test-model">
-      <img src="assets/images/feedback-model_tp_2.png" alt="wiener-image">
+      <img src="assets/images/feedback-model-new.png" alt="wiener-image">
     </div>
 
     <div id="test-solution-button-container">
@@ -215,6 +214,7 @@
       </p>
 
     </div>
+
     <div class="section-question">
       <p>
         Try clicking on the spinning dancer and note how the dancing figurine is not self regulating or adaptive. It doesn't sense anything and therefore can only do what it is directly programmed to do.
@@ -222,12 +222,17 @@
     </div>
 
     <div id="figurine-container">
-      <img src="assets/images/musical-box.png" alt="music-box">
+      <img src="assets/images/musical-box-black-white.png" alt="music-box">
     </div>
+
+    <!-- <div class="main-div">
+  </div> -->
 
   </section>
 
   <section id="conclusion" class="slide-up show-on-scroll">
+
+    <h2>Intermission</h2>
 
     <div class="sub-header-section">
       <div class="ellipse">
@@ -235,10 +240,11 @@
       </div>
 
       <p>
-        We will have to continue this another time, John von Neuman keeps prank calling me.
+        That's it for today class! John von Neuman keeps prank calling me so we will have to continue this another time, .
         <br>
         <br>
-        Before you go, just remember that cybernetic systems are becoming more relevant in people's lives every day.
+        <!-- Before you go, just remember that cybernetic systems are becoming more relevant in people's lives every day. -->
+
         To learn more, checkout the History and Extra sections.
       </p>
     </div>
@@ -259,6 +265,9 @@
 
   </section>
 
+  <section class="footer">
+
+  </section>
 
   <!-- <section id="extra-1">
 
