--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -168,16 +168,16 @@
       <!-- <img id="brain-circuits-test" src="assets/images/brain_circuits_no_colour.png" alt="brain-circuits"> -->
     </div>
 
-
-    <div class="test-model-text">
+  <!-- Test model text -->
+    <div class="test-model-text-1">
       <img src="assets/images/input.png" alt="input-image" class="drag-model-text">
       </img>
 
       <img src="assets/images/output.png" alt="output-image" class="drag-model-text">
       </img>
-    <!-- </div>
+    </div>
 
-    <div class="test-model-text"> -->
+    <div class="test-model-text-2">
       <img src="assets/images/process.png" alt="process-image" class="drag-model-text">
       </img>
 
