--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -240,7 +240,7 @@
       </div>
 
       <p>
-        That's it for today class! John von Neuman keeps prank calling me so we will have to continue this another time, .
+        That's it for today class! John von Neuman keeps prank calling me so we will have to continue this another time.
         <br>
         <br>
         <!-- Before you go, just remember that cybernetic systems are becoming more relevant in people's lives every day. -->
