--- a/cybernetics_website_final/history.html
+++ b/cybernetics_website_final/history.html
@@ -37,36 +37,31 @@
   <nav>
     <a href="index.html">Home</a>
     <!-- hashtag creates a null link -->
-    <a href="history.html">History</a>
-    <!-- <a href="https://azmatportfolio.tumblr.com/">portfolio</a> -->
-    <a href="#">Extra</a>
+    <a href="history.html">Extras</a>
+    <a href="extra.html">Sources</a>
   </nav>
   <br>
-  <!-- margin on bottom -->
-  <section id="starting-banner">
+
+  <section style="min-height: 150px;" id="starting-banner">
     <header>
-      <!-- class="slide-up show-on-scroll" -->
       <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
+      <h2 class="slide-up show-on-scroll">Extras</h2>
     </header>
   </section>
 
   <section id="extra-1">
 
-    <p>
-    There are those who claims there are levels to cybernetics.
+    <h2> History</h2>
 
-    The first level is conceptualizing the framework for human and machine systems.
+    <img src="assets/images/mcculloch.jpeg" alt="Mculloch">
+    <img src="assets/images/pitts.jpg" alt="Mculloch">
 
-    The second id the focussing on the observer.
+    <p>stafford beer.</p>
+  </section>
 
-    The third is virtualization.
+  <section id="extra-1">
 
-    We are beginning to see virtualization in areas of personal technological enhancement. As well as in medical innovations.
-
-    For example:
-  </p>
-
-    <h2> Extra 1 - First Order?</h2>
+    <h2> Medical Innovations</h2>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p>
 
@@ -76,29 +71,9 @@
   </section>
 
   <section id="extra-2">
-    <h2>Extra 2 - Second Order?</h2>
+    <h2>Cyborgs & Body Modification</h2>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p>
-  </section>
-
-  <section id="extra-3">
-    <h2>Extra 3 - Third Order?</h2>
-
-    <!-- <video autoplay muted loop id="extra-3-video">
-  <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="staff-beer-feedback">
-</video>
-
-    <div class="video-container">
-  <video autoplay muted loop>
-    <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" />
-  </video>
-  <div class="caption">
-    <h2>Your caption here</h2>
-  </div>
-</div> -->
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p>
-
   </section>
 
 
