--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -146,7 +146,7 @@
     </div>
 
     <div class="section-question">
-      <p> Can you find the hidden message at the center of the sine wave? Hover over it and give it a try.</p>
+      <p> Find the hidden message at the center of the sine wave.</p>
     </div>
 
     <!-- P5 Sketch -->
