--- a/cybernetics_website_final/history.html
+++ b/cybernetics_website_final/history.html
@@ -73,7 +73,11 @@
   <section id="extra-2">
     <h2>Cyborgs & Body Modification</h2>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p>
+    <p>Some argue these kinds of medical innovations will continue until eventually healthy people start utilizing them in order to augment their own bodies and abilities.
+    </p>
+
+    <p> For example, billionaire Elon Musk is developping a technology called NeuraLink which he claims will give people superhuman intelligence.
+    </p>
   </section>
 
 
