--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -49,6 +49,10 @@
     </header>
   </section>
 
+<div class="wiener-try-again">
+  <img src="assets/images/wiener-try-again.png" alt="wiener-try-again">
+</div>
+
   <!-- First Section INTRODUCTION -->
   <section id="introduction" class="slide-up show-on-scroll">
     <!-- Add margin instead of br or add padding for space top -->
