--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -212,7 +212,11 @@
 
   <!-- Test Model Image -->
     <div id="test-model">
-      <img src="assets/images/feedback-model-new.png" alt="wiener-image">
+      <img src="assets/images/feedback-model-new.png" alt="feedback-model-image">
+    </div>
+
+    <div id="test-model-answers">
+      <img src="assets/images/feedback-model-new-answers.png" alt="feedback-model-answers-image">
     </div>
 
     <div id="test-solution-button-container">
