--- a/cybernetics_website_final/extras.html
+++ b/cybernetics_website_final/extras.html
@@ -40,14 +40,16 @@
     <a href="history.html">Extras</a>
     <a href="extra.html">Sources</a>
   </nav>
-  <br>
 
-  <section style="min-height: 150px;" id="starting-banner">
-    <header>
-      <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
-      <h2 class="slide-up show-on-scroll">Extras</h2>
-    </header>
-  </section>
+  <section style="min-height: 150px; margin-bottom:0;" id="starting-banner">
+      <header>
+        <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
+
+      </header>
+    </section>
+  <section>
+    <h2 class="slide-up show-on-scroll" style = "color:black; padding:0; margin-bottom:0; margin-top:0">Extras</h2>
+    </section>
 
   <section id="extra-1">
 
