--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -7,9 +7,11 @@
 
   <title>Cybernetics Final Website!</title>
 
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css"/>
+
   <!-- CSS stylesheet(s) -->
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" /> -->
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,6 +29,7 @@
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+
   <!-- My p5 sketch -->
   <script src="js/sketch.js"></script>
 
@@ -41,7 +44,7 @@
     <a href="history.html">Extras</a>
     <a href="extra.html">Sources</a>
   </nav>
-  <br>
+
 
   <section id="starting-banner">
     <header>
@@ -49,7 +52,7 @@
     </header>
   </section>
 
-<div class="wiener-try-again">
+<div id="dialog">
   <img src="assets/images/wiener-try-again.png" alt="wiener-try-again">
 </div>
 
@@ -97,13 +100,13 @@
     </div>
 
     <div id="intro-buttons-container">
-      <button class="button">I don't know?</button>
+      <button class="button" id="i-dont-know">I don't know?</button>
       <button class="button" id="feedback-reveal">Feedback loops!</button>
     </div>
   </section>
 
   <!-- Second Section CHOICE -->
-  <section id="choice">
+  <section id="choice" class="show-on-scroll">
     <h2>Choice</h2>
     <div class="sub-header-section">
       <div class="ellipse">
@@ -126,8 +129,8 @@
     </div>
 
     <div id="choice-buttons-container">
-      <button class="button"> Yes </button>
-      <button class="button"> No</button>
+      <button id="choice-yes" class="button"> Yes </button>
+      <button id="choice-no" class="button"> No</button>
     </div>
 
     <span id="animated-artifact">
