--- a/cybernetics_website_final/extras.html
+++ b/cybernetics_website_final/extras.html
@@ -37,8 +37,8 @@
   <nav>
     <a href="index.html">Home</a>
     <!-- hashtag creates a null link -->
-    <a href="history.html">Extras</a>
-    <a href="extra.html">Sources</a>
+    <a href="extras.html">Extras</a>
+    <a href="sources.html">Sources</a>
   </nav>
 
   <section style="min-height: 150px; margin-bottom:0;" id="starting-banner">
