--- a/cybernetics_website_final/index.html
+++ b/cybernetics_website_final/index.html
@@ -17,9 +17,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-  <!-- Testing Fonts -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&family=Arvo:wght@700&family=Inconsolata:wght@700&family=Patua+One&family=Secular+One&display=swap" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&family=Arvo:wght@700&family=Chango&family=Gloria+Hallelujah&family=Inconsolata:wght@700&family=Monofett&family=Patua+One&family=Secular+One&display=swap" rel="stylesheet">
 
   <!-- Library script(s) -->
@@ -41,24 +38,25 @@
   <nav>
     <a href="index.html">Home</a>
     <!-- hashtag creates a null link -->
-    <a href="history.html">Extras</a>
-    <a href="extra.html">Sources</a>
+    <a href="extras.html">Extras</a>
+    <a href="sources.html">Sources</a>
   </nav>
 
-
+  <!-- Header -->
   <section id="starting-banner">
     <header>
         <h1 class="slide-up show-on-scroll">CYBERNETICS</h1>
+        <!-- <img src="assets/images/neuron-chip-color-1.png" alt="neuron-chip-image"> -->
     </header>
   </section>
 
+<!-- Div for incorrect answers -->
 <div id="dialog">
   <img src="assets/images/wiener-try-again.png" alt="wiener-try-again">
 </div>
 
   <!-- First Section INTRODUCTION -->
   <section id="introduction" class="slide-up show-on-scroll">
-    <!-- Add margin instead of br or add padding for space top -->
     <br>
     <br>
     <div class="sub-header-section">
@@ -72,9 +70,10 @@
         <br>
       </p>
     </div>
+
   <!-- End of sub header section -->
   <div class="show-on-scroll" id="book-section-image-container">
-    <a href="https://www.goodreads.com/book/show/294941.Cybernetics" target="_blank">  <img src="assets/images/wiener_book.jpg" alt="wiener-book"> </a>
+    <a href="https://www.goodreads.com/book/show/294941.Cybernetics" target="_blank">  <img src="assets/images/wiener_book_9.jpg" alt="wiener-book"> </a>
   </div>
 
   <div id="book-section">
@@ -93,12 +92,14 @@
       <p>What does this animation represent?</p>
     </div>
 
+    <!-- Arrows animation -->
     <div id="feedback_arrows">
       <img src="assets/images/input_arrow_blue.png" alt="arrow_image" id="feedback_arrows_1">
       <img src="assets/images/feedback_arrows.png" alt="feedback_arrow_image" id="feedback_arrows_center">
       <img src="assets/images/input_arrow_blue_right.png" alt="arrow_image" id="feedback_arrows_2">
     </div>
 
+    <!-- Introduction Buttons -->
     <div id="intro-buttons-container">
       <button class="button" id="i-dont-know">I don't know?</button>
       <button class="button" id="feedback-reveal">Feedback loops!</button>
@@ -121,20 +122,21 @@
       </p>
     </div>
 
-<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+  <!-- Button to return to top -->
+  <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
     <div class="section-question">
-
       <p>Are you a cybernetic system?</p>
     </div>
 
+    <!-- Choice Buttons -->
     <div id="choice-buttons-container">
       <button id="choice-yes" class="button"> Yes </button>
       <button id="choice-no" class="button"> No</button>
     </div>
 
     <span id="animated-artifact">
-      <img src="assets/images/sailboat.png" width="100px" height="100px">
+      <img src="assets/images/sailboat-4.png" width="100px" height="100px">
     </span>
 
 
@@ -183,9 +185,6 @@
         <!-- <p>Test your knowldge</p> -->
         <p>Drag the words onto the feedback model in the correct location</p>
       </div>
-      <!-- <p>Now is a good time for a test!</p> -->
-
-      <!-- <img id="brain-circuits-test" src="assets/images/brain_circuits_no_colour.png" alt="brain-circuits"> -->
     </div>
 
     <!-- Test model text -->
@@ -200,9 +199,6 @@
           </img>
         </div>
 
-        <!-- </div> -->
-
-        <!-- <div class="test-model-text-2"> -->
         <div>
           <img src="assets/images/process.png" alt="process-image" class="drag-model-text">
           </img>
@@ -254,13 +250,13 @@
     </div>
 
     <div id="figurine-container">
-      <img src="assets/images/musical-box-black-white.png" alt="music-box">
+      <img src="assets/images/figurine-no-box.png" alt="figurine">
+    </div>
+    <div id="music-box-container">
+      <img src="assets/images/musical-box-no-figurine-2.png" alt="music-box">
     </div>
 
     <p> Note how the dancing figurine is not self regulating or adaptive. It doesn't sense anything and therefore can only do what it was directly programmed to do.</p>
-
-    <!-- <div class="main-div">
-  </div> -->
 
   </section>
 
@@ -277,69 +273,17 @@
         That's it for today class! John von Neuman keeps prank calling me so we will have to continue this another time.
         <br>
         <br>
-        <!-- Before you go, just remember that cybernetic systems are becoming more relevant in people's lives every day. -->
-
         To learn more, check the Extras sections.
       </p>
     </div>
 
-    <!-- <p>
-    There are those who claims there are levels to cybernetics.
-
-    The first level is conceptualizing the framework for human and machine systems.
-
-    The second id the focussing on the observer.
-
-    The third is virtualization.
-
-    We are beginning to see virtualization in areas of personal technological enhancement. As well as in medical innovations.
-
-    For example:
-  </p> -->
 
   </section>
 
-  <section class="footer">
-
-  </section>
-
-  <!-- <section id="extra-1">
-
-    <h2> Extra 1</h2>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p> -->
-
-  <!-- alternative: https://www.youtube.com/watch?v=m0NqZGTTL7E -->
-  <!-- <iframe width="420" height="315" src="https://www.youtube.com/embed/Vq5UBwVCFyc">
-    </iframe>
-  </section>
-
-  <section id="extra-2">
-    <h2>Extra 2</h2>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p>
-  </section> -->
-
-  <!-- <section id="extra-3">
-    <h2>Extra 3</h2> -->
-
-  <!-- <video autoplay muted loop id="extra-3-video">
-  <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="staff-beer-feedback">
-</video> -->
-
-  <!-- <div class="video-container">
-  <video autoplay muted loop>
-    <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" />
-  </video>
-  <div class="caption">
-    <h2>Your caption here</h2>
-  </div>
-</div> -->
-
-  <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore doloremque, maiores. Quasi rerum, tempora eaque, officiis recusandae sed ullam consequuntur qui molestiae accusamus possimus corrupti consectetur quae iure animi ad.</p>
+<!-- Footer -->
+  <!-- <section class="footer slide-up show-on-scroll">
 
   </section> -->
-
 
   <!-- My script(s) -->
   <script src="js/script.js"></script>
