--- a/cybernetics_website_final/sources.html
+++ b/cybernetics_website_final/sources.html
@@ -37,8 +37,8 @@
   <nav>
     <a href="index.html">Home</a>
     <!-- hashtag creates a null link -->
-    <a href="history.html">Extra</a>
-    <a href="extra.html">Sources</a>
+    <a href="extras.html">Extra</a>
+    <a href="sources.html">Sources</a>
   </nav>
     <section id="starting-banner">
     <header>
